rec-tool/kubernetes/ingress-service/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-talrise
  annotations: 
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal 

    # Health Check Settings
    #alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15' 
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5' 
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'


spec:
  rules:
    #- host: example app.talrise.com
      - http:
          paths:
            - path: /rec-service
              pathType: Prefix
              backend:
                service:
                  name: rec-service-service
                  port: 
                    number: 9002
           - path: /iam-service
             pathType: Prefix
             backend:
               service:
                 name: iam-service
                 port:
                   number:
